# frag-note

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/desktop/: index.html  package.json  quick-capture.html  screenshot-overlay.html  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: clipboard.rs  lib.rs  main.rs  selection_grab_flow.rs  window.rs
apps/desktop/src-tauri/src/commands/: mod.rs  screenshot.rs  shortcuts.rs  storage.rs
docs/: PRD.md  cross-platform-smoke.md
infra/: docker-compose.dev.yml
scripts/: dev.ts
supabase/: config.toml
supabase/migrations/: 202603290001_init_frag_note.sql  202603290002_harden_processing_jobs.sql  202603290003_harden_storage_policies.sql  202603290004_add_check_constraints.sql  202603290005_derived_object_fragments_junction.sql
tests/api/: server.test.ts  worker.test.ts
tests/contracts/: fragments.test.ts  search.test.ts
tests/desktop/: accessibility-toast.test.tsx  api-client-routing.test.ts  app-shell.test.tsx  auth-client.test.ts  capture-palette-sync.test.ts  capture-store.test.ts  desktop-adapter-migration.test.ts  draft-sync.test.ts  region-screenshot-timeout.test.ts  screenshot-crop.test.ts  sync-service.test.ts  title-bar-close.test.ts  voice-recorder.test.ts
tests/domain/: answer-artifact.test.ts  derived-artifact.test.ts  derived-object.test.ts  domain-models.test.ts  primitives.test.ts  processing-job.test.ts  (+2 more)
(+156 files in other folders)
