[package]
name = "sui-note-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "sui_note_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.2" }
