[package]
name = "frag-note-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "frag_note_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
base64 = "0.22"
image = "0.25"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
arboard = "3"
enigo = "0.6.1"
mouse_position = "0.1.4"
xcap = "0.7"
